# TC2LI-SLAM

./: CMakeLists.txt  README.md  package.xml
config/: kitti.yaml
config/Camera-Inertial-Lidar/: KITTI04-12.yaml
config/Camera-Lidar/: KITTI00-02.yaml  KITTI03.yaml  KITTI04-12.yaml
include/: tc2l_slam.rviz  tc2li_slam.rviz
launch/: tc2l_slam_kitti_00-02.launch  tc2l_slam_kitti_03.launch  tc2l_slam_kitti_04-12.launch  tc2li_slam_kitti_04-12.launch
slam_framework/include/: Atlas.h  Converter.h  Frame.h  FrameDrawer.h  G2oTypes.h  G2oTypesWithLidar.h  GeometricTools.h  ImuTypes.h  KeyFrame.h  KeyFrameDatabase.h  LidarRes.h  LidarTypes.h  LocalMapping.h  MLPnPsolver.h  Map.h  MapDrawer.h  MapPoint.h  ORBVocabulary.h  ORBextractor.h  ORBmatcher.h  OptimizableTypes.h  Optimizer.h  OptimizerWithLidar.h  SerializationUtils.h  Settings.h  Sim3Solver.h  System.h  Tracking.h  TwoViewReconstruction.h  Viewer.h  bavoxel.h  tictoc.h  tools.h  use-ikfom.hpp
slam_framework/include/CameraModels/: GeometricCamera.h  KannalaBrandt8.h  Pinhole.h
slam_framework/include/IKFoM_toolkit/esekfom/: esekfom.hpp
slam_framework/include/ikd-Tree/: ikd_Tree.cpp  ikd_Tree.h
slam_framework/include/lidar_front_end/: Exp_mat.h  IMU_Processing.cpp  IMU_Processing.hpp  LidarFrontEnd.cpp  LidarFrontEnd.h  common_lib.cpp  common_lib.h  matplotlibcpp.h  preprocess.cpp  preprocess.h  so3_math.h
slam_framework/src/: Atlas.cc  Converter.cc  Frame.cc  FrameDrawer.cc  G2oTypes.cc  G2oTypesWithLidar.cc  GeometricTools.cc  ImuTypes.cc  KeyFrame.cc  KeyFrameDatabase.cc  LidarRes.cc  LidarTypes.cc  LocalMapping.cc  MLPnPsolver.cpp  Map.cc  MapDrawer.cc  MapPoint.cc  ORBextractor.cc  ORBmatcher.cc  OptimizableTypes.cpp  Optimizer.cc  OptimizerWithLidar.cc  Settings.cc  Sim3Solver.cc  System.cc  Tracking.cc  TwoViewReconstruction.cc  Viewer.cc  bavoxel.cc  tools.cc  use-ikfom.cpp
slam_framework/src/CameraModels/: KannalaBrandt8.cpp  Pinhole.cpp
src/examples/: camera_lidar.cc  camera_lidar_inertial.cc
